--- a/public/chat/package.json
+++ b/public/chat/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angularx-social-login": "^2.2.1",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
