--- a/public/chat/package.json
+++ b/public/chat/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
+    "@angular/fire": "^6.0.0-rc.1",
     "@angular/forms": "~9.0.2",
     "@angular/material": "^9.1.0",
     "@angular/platform-browser": "~9.0.2",
@@ -31,7 +32,8 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "firebase": "^7.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
@@ -52,6 +54,11 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "@angular-devkit/architect": "^0.900.0-0 || ^0.900.0",
+    "firebase-tools": "^7.12.1",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   }
 }
