--- a/public/chat/package.json
+++ b/public/chat/package.json
@@ -29,11 +29,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "angularx-social-login": "^2.2.1",
     "bootstrap": "^4.4.1",
+    "constantinople": "^3.1.1",
     "core-js": "^2.5.4",
+    "firebase": "^7.8.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.8.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
