--- a/public/chat/package.json
+++ b/public/chat/package.json
@@ -32,6 +32,7 @@
     "constantinople": "^3.1.1",
     "core-js": "^2.5.4",
     "firebase": "^7.8.0",
+    "lodash": "^4.17.15",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
